--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,5 @@
-AllCops:
-  Include:
-    - Gemfile
-    - Guardfile
-    - Rakefile
-    - tasks/*.rake
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+
+Style/DotPosition:
+  EnforcedStyle: trailing
